java 7 compatibility fixes